Using messeger service to retrieve and to send the messages. The sent and received messages are displayed in the crud table.

--- a/src/app/shop/messenger/messenger.component.css
+++ b/src/app/shop/messenger/messenger.component.css
@@ -3,3 +3,24 @@ form {
     flex-direction: column;
     align-items: flex-start;
 }
+
+.message-container {
+    border-radius: 10px;
+    margin: 5%;
+    box-shadow: 3px 2px 27px 0px rgb(0 0 0 / 75%);
+    -webkit-box-shadow: 3px 2px 27px 0px rgb(0 0 0 / 75%);
+    -moz-box-shadow: 3px 2px 27px 0px rgba(0,0,0,0.75);
+}
+
+mat-form-field {
+    width: 90%;
+    margin: 20px;
+}
+
+textarea {
+    resize: none;
+}
+
+.message-header{
+    width: 100%;
+}
