--- a/src/app/shop/staff/staff.component.html
+++ b/src/app/shop/staff/staff.component.html
@@ -8,8 +8,8 @@
     <mat-form-field>
       <mat-label>Introduce un rango de fechas</mat-label>
       <mat-date-range-input [rangePicker]="picker">
-        <input [(ngModel)]="staffTime.startDate" matStartDate placeholder="Fecha de inicio">
-        <input [(ngModel)]="staffTime.endDate" matEndDate placeholder="Fecha de fin">
+        <input [(ngModel)]="startDate" matStartDate placeholder="Fecha de inicio">
+        <input [(ngModel)]="endDate" matEndDate placeholder="Fecha de fin">
       </mat-date-range-input>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-date-range-picker #picker></mat-date-range-picker>
@@ -21,11 +21,12 @@
         <option value="month">Mes</option>
       </select>
     </mat-form-field>
-    <button (click)="search()" mat-icon-button [disabled]="!staffTime.isComplete()">
+    <button (click)="search()" mat-icon-button>
       <mat-icon>search</mat-icon>
     </button>
     <button (click)="resetSearch()" mat-icon-button>
       <mat-icon>close</mat-icon>
     </button>
+    <app-crud [data]="data" [updateAction]="false" [readAction]="false" [createAction]="false" [deleteAction]="false" [title] = "'Staff time'"></app-crud>
   </mat-card-content>
 </mat-card>
