--- a/src/app/home/stock-management/table-stock/table-stock.component.html
+++ b/src/app/home/stock-management/table-stock/table-stock.component.html
@@ -24,6 +24,10 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumnsProductsSold;"></tr>
   </ng-container>
   <ng-container *ngIf="stock">
+    <ng-container matColumnDef="stock">
+      <th mat-header-cell *matHeaderCellDef> Stock</th>
+      <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </ng-container>
