#28 updated checkout dialog with phone

--- a/src/app/shop/users/dialog/user-update-dialog.component.html
+++ b/src/app/shop/users/dialog/user-update-dialog.component.html
@@ -11,17 +11,17 @@
     </mat-form-field>
     <mat-form-field class="full-width">
       <mat-label>Family Name</mat-label>
-      <input [(ngModel)]="user.familyName" matInput required type="text"/>
+      <input [(ngModel)]="user.familyName" matInput  type="text"/>
     </mat-form-field>
   </p>
   <p>
     <mat-form-field class="full-width">
       <mat-label>DNI</mat-label>
-      <input [(ngModel)]="user.dni" matInput required type="text"/>
+      <input [(ngModel)]="user.dni" matInput type="text"/>
     </mat-form-field>
     <mat-form-field class="full-width">
       <mat-label>Email</mat-label>
-      <input [(ngModel)]="user.email" matInput required type="email"/>
+      <input [(ngModel)]="user.email" matInput  type="email"/>
     </mat-form-field>
   </p>
   <p>
@@ -46,10 +46,10 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button cdkFocusInitial mat-dialog-close mat-raised-button>Close</button>
-  <button (click)="createCompleteUser()" *ngIf="isCreate()" [disabled]="isAuthenticated()" color="primary"
+  <button (click)="createCompleteUser()" *ngIf="isCreate()" [disabled]=invalid() color="primary"
           mat-raised-button>Create
   </button>
-  <button (click)="updateCompleteUser()" *ngIf="!isCreate()" [disabled]="isAuthenticated()" color="primary"
+  <button (click)="updateCompleteUser()" *ngIf="!isCreate()" [disabled]=invalid() color="primary"
           mat-raised-button>Update
   </button>
 </mat-dialog-actions>
