#30 added staff reports

--- a/src/app/shop/staff/staff.component.html
+++ b/src/app/shop/staff/staff.component.html
@@ -29,4 +29,5 @@
     </button>
     <app-crud [data]="data" [updateAction]="false" [readAction]="false" [createAction]="false" [deleteAction]="false" [title] = "'Staff time'"></app-crud>
   </mat-card-content>
+  <app-staff-report></app-staff-report>
 </mat-card>
