--- a/src/app/home/stock-management/table-stock/table-stock.component.html
+++ b/src/app/home/stock-management/table-stock/table-stock.component.html
@@ -17,7 +17,7 @@
   </ng-container>
   <ng-container *ngIf="productSold">
     <ng-container matColumnDef="dateSell">
-      <th mat-header-cell *matHeaderCellDef> Date</th>
+      <th mat-header-cell *matHeaderCellDef> Sale date</th>
       <td mat-cell *matCellDef="let element"> {{element.dateSell}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumnsProductsSold"></tr>
