--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -80,7 +80,7 @@
     <mat-icon>toc</mat-icon>
     <span>Tickets</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="">
+  <button mat-menu-item routerLink="/shop/online-order">
     <mat-icon>shopping_basket</mat-icon>
     <span>Online Orders</span>
   </button>
