--- a/src/app/shop/stock-audit/stock-audit.component.html
+++ b/src/app/shop/stock-audit/stock-audit.component.html
@@ -17,19 +17,15 @@
         <mat-header-cell *matHeaderCellDef fxFlex="28%"> Description</mat-header-cell>
         <mat-cell *matCellDef="let article" fxFlex="28%"> {{article.description}}</mat-cell>
       </ng-container>
-      <ng-container matColumnDef="retailPrice">
-        <mat-header-cell *matHeaderCellDef fxFlex="11%"> Retail Price</mat-header-cell>
-        <mat-cell *matCellDef="let article" fxFlex="11%">{{article.retailPrice}}</mat-cell>
-      </ng-container>
       <ng-container matColumnDef="stock">
         <mat-header-cell *matHeaderCellDef fxFlex="11%"> Stock</mat-header-cell>
         <mat-cell *matCellDef="let article" fxFlex="11%">{{article.stock}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="realStock">
         <mat-header-cell *matHeaderCellDef fxFlex="20%"> Real stock</mat-header-cell>
-        <mat-cell *matCellDef="let article" fxFlex="20%">
+        <mat-cell *matCellDef="let x = index" fxFlex="20%">
           <md-input-container>
-            <input mdInput type="number" [(ngModel)]="article.realStock"/>
+            <input mdInput type="number" [(ngModel)]="arrRealStock[x]"/>
           </md-input-container>
         </mat-cell>
       </ng-container>
@@ -41,38 +37,17 @@
   <button mat-raised-button (click)="closeAudit()" color="primary">Close audit</button>
 </mat-card>
 <ng-container *ngIf="closedAudit">
-<mat-card>
-  <mat-card-title>
-    <mat-icon color="primary">assessment</mat-icon>
-    Not audited articles
-  </mat-card-title>
-  <mat-card-content>
-    <mat-table [dataSource]="notAuditedArticles" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef fxFlex="5%">Nº</mat-header-cell>
-        <mat-cell *matCellDef="let i = index" fxFlex="5%"> {{i + 1}}</mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="barcode">
-        <mat-header-cell *matHeaderCellDef fxFlex="28%">Barcode</mat-header-cell>
-        <mat-cell *matCellDef="let article" fxFlex="28%"> {{article.barcode}}</mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="description">
-        <mat-header-cell *matHeaderCellDef fxFlex="28%"> Description</mat-header-cell>
-        <mat-cell *matCellDef="let article" fxFlex="28%"> {{article.description}}</mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="retailPrice">
-        <mat-header-cell *matHeaderCellDef fxFlex="11%"> Retail Price</mat-header-cell>
-        <mat-cell *matCellDef="let article" fxFlex="11%">{{article.retailPrice}}</mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="stock">
-        <mat-header-cell *matHeaderCellDef fxFlex="11%"> Stock</mat-header-cell>
-        <mat-cell *matCellDef="let article" fxFlex="11%">{{article.stock}}</mat-cell>
-      </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumnsNotAudit"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumnsNotAudit;"></mat-row>
-    </mat-table>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-title>
+      <mat-icon color="primary">assessment</mat-icon>
+      Not audited articles
+    </mat-card-title>
+    <mat-card-content>
+      <li *ngFor="let notAudit of notAuditedArticles">
+        {{ notAudit }}
+      </li>
+    </mat-card-content>
+  </mat-card>
   <mat-card>
     <mat-card-title>
       <mat-icon color="primary">assessment</mat-icon>
@@ -88,23 +63,15 @@
           <mat-header-cell *matHeaderCellDef fxFlex="28%">Barcode</mat-header-cell>
           <mat-cell *matCellDef="let article" fxFlex="28%"> {{article.barcode}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="description">
-          <mat-header-cell *matHeaderCellDef fxFlex="28%"> Description</mat-header-cell>
-          <mat-cell *matCellDef="let article" fxFlex="28%"> {{article.description}}</mat-cell>
-        </ng-container>
         <ng-container matColumnDef="amount">
           <mat-header-cell *matHeaderCellDef fxFlex="11%"> Amount</mat-header-cell>
           <mat-cell *matCellDef="let article" fxFlex="11%">{{article.amount}}</mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="retailPrice">
-          <mat-header-cell *matHeaderCellDef fxFlex="11%"> Retail Price</mat-header-cell>
-          <mat-cell *matCellDef="let article" fxFlex="11%">{{article.retailPrice}}</mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumnsArticleLoss"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumnsArticleLoss;"></mat-row>
       </mat-table>
     </mat-card-content>
-    <p style="margin-top: 1vw; font-size: xx-large;">TOTAL: {{total}}€</p>
+    <p style="margin-top: 1vw; font-size: xx-large;">TOTAL: {{lossValue}}€</p>
   </mat-card>
-  <button mat-raised-button (click)="newAudit()" color="primary">New audit</button>
+  <button mat-raised-button (click)="initAudit()" color="primary">New audit</button>
 </ng-container>
