--- a/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/article-family-view/article-family-view.component.html
@@ -23,13 +23,13 @@
         </mat-card-header>
       </mat-card>
 
-      <mat-card *ngIf="articleFamily.type==null" class="mat-elevation-z4 leaf">
+      <mat-card *ngIf="articleFamily.type=='article'" class="mat-elevation-z4 leaf">
         <mat-card-header>
           <mat-card-title>{{articleFamily.description}}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <p style="text-align: right">
-            {{articleFamily.retailPrice}}€
+            {{articleFamily.price}}€
           </p>
         </mat-card-content>
         <mat-card-actions>
