conected create() with back-end

--- a/src/app/shop/stock-alarms/stock-alarm-chip/stock-alarm-chip.component.html
+++ b/src/app/shop/stock-alarms/stock-alarm-chip/stock-alarm-chip.component.html
@@ -3,7 +3,7 @@
     <div class="flex-row">
       <div>
         <div>BC: {{data.barcode}}</div>
-        <div>STK: </div>
+        <div>STK: {{data.stock}} </div>
         <div>
           <button (click)="click()" class="close" mat-mini-fab aria-label="Example icon-button with a heart icon">
             <mat-icon class="min-icon">close</mat-icon>
@@ -12,10 +12,12 @@
       </div>
       <div class="flex-column">
         <div>
-          <input [(ngModel)]="data.warning" placeholder="Warning" class="warning" (change)="changeWarning()" [value]="data.warning?data.warning:''"/>
+          <input [(ngModel)]="data.warning" placeholder="Warning" class="warning" (change)="changeWarning()"
+                 [value]="data.warning?data.warning:''"/>
         </div>
         <div>
-          <input [(ngModel)]="data.critical" placeholder="Critical" class="critical" (change)="changeCritical()" [value]="data.critical?data.critical:'' "/>
+          <input [(ngModel)]="data.critical" placeholder="Critical" class="critical" (change)="changeCritical()"
+                 [value]="data.critical?data.critical:'' "/>
         </div>
       </div>
     </div>
