connect findByName() with back-end #41

--- a/src/app/shop/stock-alarms/stock-alarms.component.html
+++ b/src/app/shop/stock-alarms/stock-alarms.component.html
@@ -3,7 +3,7 @@
     <mat-label><strong>Filters: </strong></mat-label>
     <mat-form-field>
       <mat-label>Alarm Name</mat-label>
-      <input [(ngModel)]="reference" matInput>
+      <input [(ngModel)]="name" matInput>
     </mat-form-field>
 
     <button (click)="search()" mat-icon-button>
