Only show pending tickets for a user who has a credit-line #61

--- a/src/app/shop/cashier-opened/credit-line-pay-dialog.component.html
+++ b/src/app/shop/cashier-opened/credit-line-pay-dialog.component.html
@@ -1,6 +1,6 @@
 <h3 mat-dialog-title>Pay pending tickets</h3>
 <mat-dialog-content>
-  <app-search (renew)="searchUnpaidTicketsByUserPhone()" (selected)="onSelect($event)" [key]="userPhone"
+  <app-search (renew)="searchUnpaidTicketsByUserPhone()" (selected)="onSelect($event)" [(key)]="userPhone"
               title="User's phone">
   </app-search>
   <app-list *ngIf="user" [data]="unpaidTickets" [readAction]="false" [createAction]="false" [deleteAction]="false" [title]="title"></app-list>
