Complete basic functions complaints issue #17

--- a/src/app/home/complaints/complaints.component.html
+++ b/src/app/home/complaints/complaints.component.html
@@ -7,5 +7,4 @@
   </mat-card-content>
 </mat-card>
 <app-crud (create)="create()" (read)="read($event)" (delete)="delete($event)"
-          (update)="update($event)" [data]="complaints" [title]="title"
-          [deleteAction]="deleteBool"></app-crud>
+          (update)="update($event)" [data]="complaints" [title]="title"></app-crud>
