--- a/src/app/home/offers/offers.component.html
+++ b/src/app/home/offers/offers.component.html
@@ -1,11 +1,1 @@
-<mat-card>
-  <mat-card-content>
-    <button (click)="searchAll()" mat-icon-button>
-      <span>Search All Offers</span>
-      <mat-icon>search</mat-icon>
-    </button>
-  </mat-card-content>
-</mat-card>
-<app-crud (read)="read($event)" [data]="offers" [title]="title"
-          [updateAction]="false" [createAction]="false" [deleteAction]="false">
-</app-crud>
+<h1>Offer Details</h1>
