--- a/src/app/home/top5/top5.component.html
+++ b/src/app/home/top5/top5.component.html
@@ -1,25 +1,21 @@
 <mat-grid-list cols="1" rowHeight="4:1">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let article"> {{bestsellers.indexOf(article) + 1}} </td>
+      <td mat-cell *matCellDef="let article"> {{top5Articles.indexOf(article) + 1}} </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="barcode">
       <th mat-header-cell *matHeaderCellDef> Barcode </th>
       <td mat-cell *matCellDef="let article"> {{article.barcode}} </td>
     </ng-container>
 
-    <!-- Weight Column -->
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Description </th>
       <td mat-cell *matCellDef="let article"> {{article.description}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="retailPrice">
       <th mat-header-cell *matHeaderCellDef> Price </th>
       <td mat-cell *matCellDef="let article"> {{article.retailPrice}} €</td>
