--- a/src/app/home/top5/top5.component.html
+++ b/src/app/home/top5/top5.component.html
@@ -1,29 +1,23 @@
 <mat-grid-list cols="1" rowHeight="4:1">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let article"> {{top5Articles.indexOf(article) + 1}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="barcode">
-      <th mat-header-cell *matHeaderCellDef> Barcode </th>
-      <td mat-cell *matCellDef="let article"> {{article.barcode}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let article"> {{article.description}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="retailPrice">
-      <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let article"> {{article.retailPrice}} €</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
+      <table>
+        <thead>
+        <tr>
+          <th>No.</th>
+          <th>Barcode</th>
+          <th>Description</th>
+          <th>Retail Price</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let article of top5Articles; let i = index;">
+          <td> {{i + 1}}</td>
+          <td>{{ article.barcode }}</td>
+          <td>{{ article.description }}</td>
+          <td>{{ article.retailPrice }}</td>
+        </tr>
+        </tbody>
+      </table>
 
 </mat-grid-list>
+
