--- a/src/app/home/online-order/online-order.component.html
+++ b/src/app/home/online-order/online-order.component.html
@@ -6,19 +6,14 @@
 <mat-grid-list>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="reference">
-      <th mat-header-cell *matHeaderCellDef> Reference </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.reference}} </td>
-    </ng-container>
-
     <ng-container matColumnDef="deliveryDate">
       <th mat-header-cell *matHeaderCellDef> Delivery Date </th>
       <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.deliveryDate}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="ticket">
-      <th mat-header-cell *matHeaderCellDef> Ticket </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.ticket}}</td>
+    <ng-container matColumnDef="totalPayed">
+      <th mat-header-cell *matHeaderCellDef> Total Payed </th>
+      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.totalPayed}}</td>
     </ng-container>
 
     <ng-container matColumnDef="state">
