--- a/src/app/shop/online-order/online-order.component.css
+++ b/src/app/shop/online-order/online-order.component.css
@@ -1,3 +1,12 @@
+.container {
+  display: flex;
+  flex-direction: row;
+  max-height: 500px;
+  min-width: 300px;
+}
+
 table {
+  overflow: auto;
+  max-height: 600px;
   width: 100%;
 }
