--- a/src/app/shop/online-order/online-order.component.html
+++ b/src/app/shop/online-order/online-order.component.html
@@ -8,7 +8,7 @@
 
     <ng-container matColumnDef="reference">
       <th mat-header-cell *matHeaderCellDef> Reference </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.reference}} </td>
+      <td mat-cell *matCellDef="let onlineOrder"> {{ onlineOrder.reference }} </td>
     </ng-container>
 
     <ng-container matColumnDef="deliveryDate">
@@ -16,14 +16,27 @@
       <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.deliveryDate}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="ticket">
-      <th mat-header-cell *matHeaderCellDef> Ticket </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.ticket}}</td>
+    <ng-container matColumnDef="totalPayed">
+      <th mat-header-cell *matHeaderCellDef> Total Payed </th>
+      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.totalPayed}}</td>
     </ng-container>
 
     <ng-container matColumnDef="state">
       <th mat-header-cell *matHeaderCellDef> State </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.state}}</td>
+      <td mat-cell *matCellDef="let onlineOrder">
+        <mat-select>
+          <mat-option *ngFor="let state of stateOptions" [value]="state">{{ state }}</mat-option>
+      </mat-select>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="saveState">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let onlineOrder">
+        <button color="primary" mat-raised-button>
+          Save
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
