Modify the action of Orders #37

--- a/src/app/shop/provider-orders/provider-order-dialog.component.html
+++ b/src/app/shop/provider-orders/provider-order-dialog.component.html
@@ -2,32 +2,38 @@
 <mat-dialog-content>
   <mat-form-field class="full-width">
     <mat-label>Description</mat-label>
-    <input [(ngModel)]="order.description" matInput required type="text" [disabled]="!isCreate()"/>
+    <input [(ngModel)]="order.description" matInput type="text"/>
   </mat-form-field>
-  <app-search-by-company [(company)]="order.providerCompany" class="medium-width"></app-search-by-company>
-  <mat-form-field class="full-width" disabled="!isCreate()">
+  <app-search-by-company [(company)]="order.providerCompany" (companyChange)="addCompany($event)"
+                         (close)="resetFinalAmount()" class="medium-width"></app-search-by-company>
+  <mat-form-field *ngIf="!isCreate()" appearance="fill">
     <mat-label>Opening</mat-label>
-    <input [(ngModel)]="order.openingDate" matInput required type="date" [disabled]="!isCreate()"/>
+    <input matInput [disabled]="!isCreate()" [matDatepicker]="openingDate" [value]="order.openingDate">
+    <mat-datepicker-toggle matSuffix [for]="openingDate"></mat-datepicker-toggle>
+    <mat-datepicker #openingDate></mat-datepicker>
   </mat-form-field>
+
   <app-search-by-barcode (add)="addBarcode($event)" class="medium-width"></app-search-by-barcode>
   <mat-form-field class="medium-width">
     <mat-label>Amount</mat-label>
     <input [(ngModel)]="orderLine.requiredAmount" matInput required type="number"/>
   </mat-form-field>
-  <mat-form-field class="medium-width">
+  <mat-form-field *ngIf="!isCreate()" class="medium-width">
     <mat-label>Final</mat-label>
     <input [(ngModel)]="orderLine.finalAmount" matInput type="number" [disabled]="!isCreate()"/>
   </mat-form-field>
-  <app-crud (create)="createOrderLine()"
-            [data]="providerOrderLines" [readAction]="false" [deleteAction]="false" [updateAction]="false"
-            [title]=""></app-crud>
+  <app-crud (create)="createOrderLine()" (update)="updateOrderLine()"
+            [data]="providerOrderLines" [readAction]="false" [deleteAction]="false" [updateAction]="!isCreate()"
+            [title]="titleOrderline">
+  </app-crud>
 </mat-dialog-content>
 
 <mat-dialog-actions>
   <button (click)="create()" *ngIf="isCreate()" [disabled]="validateFields()" color="primary" mat-raised-button>Create
   </button>
-  <button (click)="update()" *ngIf="!isCreate()" [disabled]="validateFields()" color="primary" mat-raised-button>
+  <button (click)="update()" *ngIf="!isCreate() && order.closingDate===undefined" [disabled]="validateFields()"
+          color="primary" mat-raised-button>
     Update
   </button>
-  <button *ngIf="!isCreate()" cdkFocusInitial mat-dialog-close mat-raised-button>Close</button>
+  <button (click)="close()" *ngIf="!isCreate()" cdkFocusInitial mat-dialog-close mat-raised-button>Close</button>
 </mat-dialog-actions>
