--- a/src/app/home/shopping-basket/shopping-basket.component.html
+++ b/src/app/home/shopping-basket/shopping-basket.component.html
@@ -10,7 +10,9 @@
 
       <ng-container matColumnDef="photo">
         <th mat-header-cell *matHeaderCellDef> Photo del Producto </th>
-        <td mat-cell *matCellDef="let article"> {{shoppingBasket.indexOf(article) + 1}} </td>
+        <td mat-cell *matCellDef="let article">
+          <img src="{{article.photo}}">
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
