--- a/src/app/home/adviser/popular/popular.component.html
+++ b/src/app/home/adviser/popular/popular.component.html
@@ -1,1 +1,1 @@
-<app-adviser [articles]="popularArticles"></app-adviser>
+<app-adviser (add)="addArticle($event)" [articles]="popularArticles"></app-adviser>
