--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,7 +65,7 @@
 <mat-toolbar class="center">
   <button [matMenuTriggerFor]="adviser" mat-button>Adviser</button>
   <mat-menu #adviser="matMenu">
-    <button mat-menu-item>Sale</button>
+    <button mat-menu-item routerLink="/home/adviser/sale">Sale</button>
     <button mat-menu-item routerLink="/home/adviser/popular">Popular</button>
     <button mat-menu-item routerLink="/home/adviser/news">New</button>
   </mat-menu>
