Create message floating window and payment window #5

--- a/src/app/home/shopping-basket/shopping-basket.component.html
+++ b/src/app/home/shopping-basket/shopping-basket.component.html
@@ -2,14 +2,14 @@
 
   <mat-card-title>
     <mat-icon color="primary">shopping_cart</mat-icon>
-    Shopping Basket --Total:{{totalShoppingBasket| currency:'EUR':'symbol'}}
+    Shopping Basket ------Total:{{ totalShoppingBasket| currency:'EUR':'symbol'}}
   </mat-card-title>
 
   <mat-grid-list>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
       <ng-container matColumnDef="photo">
-        <th mat-header-cell *matHeaderCellDef> Photo del Producto </th>
+        <th mat-header-cell *matHeaderCellDef> Product Photo </th>
         <td mat-cell *matCellDef="let article">
           <img src="{{article.photo}}">
         </td>
@@ -72,3 +72,20 @@
   </mat-card-content>
 
 </mat-card>
+
+<div id="NavTop">
+  <div id="NavCon" class="box">
+
+    <div class="display-row">
+      <div id="confirmation" class="display-columna" (click)="confirm()" mat-raised-button>
+        <strong>Confirmation <br>message</strong>
+      </div>
+    </div>
+    <div class="display-row">
+      <div id="reference" class="display-columna" routerLink="/home/online-order" mat-raised-button>
+        <strong>Online Order <br>Reference</strong>
+      </div>
+    </div>
+
+  </div>
+</div>
