--- a/src/app/home/shopping-basket/shopping-basket.component.css
+++ b/src/app/home/shopping-basket/shopping-basket.component.css
@@ -9,8 +9,49 @@ table {
   overflow: auto;
   max-height: 600px;
   width: 100%;
+  margin-top: 20px;
 }
 
 img {
   height: 100px;
+}
+
+mat-card {
+  width: 100%;
+}
+
+mat-card-content {
+  margin-top: 10px;
+}
+
+#NavTop{
+  width:120px;
+  height:160px;
+  margin-top:50px;
+  position:fixed;
+  right:0px;
+  top:150px;
+}
+
+.box{
+  width: auto;
+  text-align: center;
+}
+
+.display-columna{
+  padding: 14px;
+}
+
+#confirmation {
+  background-color: #3F51B5;
+}
+
+#reference {
+  margin-top: 20px;
+  background-color: gold;
+}
+
+.mat-dialog-content {
+  display: flex;
+  flex-direction: column;
 }
