--- a/src/app/home/shopping-basket/pay-dialog.component.html
+++ b/src/app/home/shopping-basket/pay-dialog.component.html
@@ -1,11 +1,11 @@
 <h2 mat-dialog-title>Successful!!!</h2>
 
 <mat-dialog-content>
-  <button id="confirmation" (click)="confirm()" mat-button>
+  <button id="confirmation" color="primary" (click)="confirm()" mat-button>
     Confirmation <br>message
   </button>
 
-  <button id="reference" routerLink="/home/online-order" mat-button>
+  <button id="reference" color="accent" routerLink="/home/online-order" mat-button>
     Online Order <br>Reference
   </button>
 </mat-dialog-content>
