--- a/src/app/home/online-order/online-order.component.html
+++ b/src/app/home/online-order/online-order.component.html
@@ -1,27 +1,30 @@
-<mat-card-title>
-  <mat-icon color="primary">shopping_basket</mat-icon>
-  Online Orders
-</mat-card-title>
+<mat-card>
+  <mat-card-title>
+    <mat-icon color="primary">shopping_basket</mat-icon>
+    Online Orders
+  </mat-card-title>
 
-<mat-grid-list>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <mat-grid-list>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="deliveryDate">
-      <th mat-header-cell *matHeaderCellDef> Delivery Date </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.deliveryDate}} </td>
-    </ng-container>
+      <ng-container matColumnDef="deliveryDate">
+        <th mat-header-cell *matHeaderCellDef> Delivery Date </th>
+        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.deliveryDate}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="totalPayed">
-      <th mat-header-cell *matHeaderCellDef> Total Payed </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.totalPayed}}</td>
-    </ng-container>
+      <ng-container matColumnDef="totalPayed">
+        <th mat-header-cell *matHeaderCellDef> Total Payed </th>
+        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.totalPayed}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="state">
-      <th mat-header-cell *matHeaderCellDef> State </th>
-      <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.state}}</td>
-    </ng-container>
+      <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef> State </th>
+        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.state}}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-</mat-grid-list>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </mat-grid-list>
+
+</mat-card>
