#80 some changes at front+endPoints admin-management

--- a/src/app/shop/users/dialog/user-update-create-dialog.component.html
+++ b/src/app/shop/users/dialog/user-update-create-dialog.component.html
@@ -27,7 +27,7 @@
   <p>
     <mat-form-field class="full-width">
       <mat-label>Password</mat-label>
-      <input [(ngModel)]="user.password" matInput type="password"/>
+      <input [(ngModel)]="user.password" matInput required type="password"/>
     </mat-form-field>
   </p>
   <p>
