--- a/src/app/home/stock-management/stock-management.component.html
+++ b/src/app/home/stock-management/stock-management.component.html
@@ -56,12 +56,19 @@
     <mat-card-content>
       <mat-form-field>
         <mat-label>Enter a barcode</mat-label>
-        <input [(ngModel)]="stockArticle.barcode" matInput type="number">
+        <input [(ngModel)]="stockArticle.barcode" matInput type="string">
       </mat-form-field>
       <button (click)="searchFutureStock()" mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
     </mat-card-content>
+    <ng-container *ngIf="stockForescatError">
+      <mat-card>
+        <mat-card-content>
+          <mat-label class="error"><strong>BARCODE no válido</strong></mat-label>
+        </mat-card-content>
+      </mat-card>
+    </ng-container>
     <ng-container *ngIf="stockForescat">
       <mat-card>
         <mat-card-content>
@@ -109,7 +116,7 @@
           <mat-label>{{(stockZero|async)?.stock}}</mat-label>
         </mat-card-content>
         <mat-card-content>
-          <mat-label><strong>Date empty stock:  </strong></mat-label>
+          <mat-label><strong>Date empty stock: </strong></mat-label>
           <mat-label>{{(stockZero|async)?.dateStockEmpty}}</mat-label>
         </mat-card-content>
       </mat-card>
