--- a/src/app/shop/stock-alarms/stock-alarms.component.html
+++ b/src/app/shop/stock-alarms/stock-alarms.component.html
@@ -23,13 +23,15 @@
     </div>
     <div class="flex-column" style="width: 25%;">
       <mat-card style="background-color: orange">Warning</mat-card>
-      <ng-container *ngFor="let current of alarms">
+      <ng-container *ngFor="let current of stockAlarms.warningAlarms">
         <app-stock-alarm-chip [data]="current"></app-stock-alarm-chip>
       </ng-container>
     </div>
     <div class="flex-column" style="width: 25%;">
       <mat-card style="background-color: red">Critical</mat-card>
-
+      <ng-container *ngFor="let current of stockAlarms.criticalAlarms">
+        <app-stock-alarm-chip [data]="current"></app-stock-alarm-chip>
+      </ng-container>
     </div>
   </div>
 
